[fix] index title

--- a/themes/chord/layout/index.pug
+++ b/themes/chord/layout/index.pug
@@ -1,7 +1,7 @@
 extends _partial/layout
 
 block title
-  title= `${config.title} | ${config.subtitle}`
+  title= config.title
 
 block content
   div.content__index
