--- a/themes/chord/layout/_partial/layout.pug
+++ b/themes/chord/layout/_partial/layout.pug
@@ -2,21 +2,7 @@ include helpers
 
 doctype
 html(lang=config.language)
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0")
-    meta(content='yes', name='apple-mobile-web-app-capable')
-    meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
-    meta(content='telephone=no', name='format-detection')
-    meta(name="description" content=config.description)
-    meta(name="randerer" content="webkit")
-    meta(http-equiv="Cache-Control" content="no-siteapp")
-    meta(http-equiv="Cache-Control" content="no-transform")
-    block title
-    link(rel="stylesheet" href=url_for('/css/normailze.css'))
-    link(rel="stylesheet" href=url_for('/css/style.css'))
-    link(rel="shortcut icon" type="image/x-icon" href="/favicon.ico")
+  include ./head.pug
   body
     <!--[if ltg IE 9]><div>是时候换个现代浏览器了，点击更换<a href="http://browsehappy.com/"></a></div><!--<![endif]-->
     header
