--- a/themes/chord/layout/_partial/nav.pug
+++ b/themes/chord/layout/_partial/nav.pug
@@ -1,7 +1,7 @@
 nav.header
   div.site__name
     h1.logo
-      a(href='#')
+      a(href="#")
         img(src=url_for(theme.logo) alt="logo").
   ul.menu
     each menu in theme.menu
