--- a/themes/chord/layout/page.pug
+++ b/themes/chord/layout/page.pug
@@ -4,4 +4,4 @@ block title
   title= `${page.title} | ${config.title}`
 
 block content
-  article.about !{page.content}
+  article.about!= page.content
