--- a/themes/chord/layout/_partial/copyright.pug
+++ b/themes/chord/layout/_partial/copyright.pug
@@ -1,4 +1,6 @@
-.copynight © 莫声谷. Powered by&nbsp;
-  a(href="https://hexo.io") Hexo.
-  | Theme by&nbsp;
-  a(href="#") Chord.
+.copynight
+  p &copy; OldBigBuddha.
+  p Powered by
+    a(href="https://hexo.io")  Hexo.
+  p Theme by
+    a(href="https://github.com/Simlesos/hexo-theme-chord" alt="Chord'sGitHub Repository")  Chord.
