--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -21,7 +21,8 @@ head
 
   block title
 
-  link(rel="stylesheet", href=url_for("/css/normailze.css"))
+  link(rel="stylesheet", href=url_for("/css/header.css"))
   link(rel="stylesheet", href=url_for("/css/style.css"))
+  link(rel="stylesheet", href=url_for("/css/footer.css"))
 
   link(rel="shortcut icon", type="image/x-icon", href="/favicon.ico")
