[add] ress.css(CDN)

--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -21,6 +21,7 @@ head
 
   block title
 
+  link(rel="stylesheet", href="https://unpkg.com/ress/dist/ress.min.css")
   link(rel="stylesheet", href=url_for("/css/header.css"))
   link(rel="stylesheet", href=url_for("/css/style.css"))
   link(rel="stylesheet", href=url_for("/css/footer.css"))
