--- a/themes/chord/layout/_partial/layout.pug
+++ b/themes/chord/layout/_partial/layout.pug
@@ -4,7 +4,7 @@ doctype
 html(lang=config.language)
   include ./head.pug
   body
-    <!--[if ltg IE 9]><div>是时候换个现代浏览器了，点击更换<a href="http://browsehappy.com/"></a></div><!--<![endif]-->
+    //- <!--[if ltg IE 9]><div>是时候换个现代浏览器了，点击更换<a href="http://browsehappy.com/"></a></div><!--<![endif]-->
     include ./header.pug
 
     section.content
