[fix]header style

--- a/themes/chord/layout/_partial/footer.pug
+++ b/themes/chord/layout/_partial/footer.pug
@@ -1,6 +1,6 @@
 footer
   .copynight
-    p &copy; OldBigBuddha.
+    p &copy; 2018 OldBigBuddha.
     p Powered by
       a(href="https://hexo.io")  Hexo.
     p Theme by
