--- a/themes/chord/layout/_partial/header.pug
+++ b/themes/chord/layout/_partial/header.pug
@@ -1,9 +1,9 @@
 header
   .site__name
-    h1.logo
-      a(href="#")
+    .logo
+      a(href=url_for("/"))
         img(src=url_for(theme.logo) alt="logo").
-    p Simple is Best
+    h1.title Simple is Best
 
   nav.header
     ul.menu
