--- a/themes/chord/source/css/header.styl
+++ b/themes/chord/source/css/header.styl
@@ -1,6 +1,16 @@
 header
   width 100%
 
+.logo a img
+  height 125px
+  text-align center
+
+h1.title
+  width 100%
+  text-align center
+  padding 12px
+  font-size 3rem
+
 nav.header
   width 100%
   margin 0 auto
