[update]post style

--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -24,6 +24,7 @@ head
   link(rel="stylesheet", href="https://unpkg.com/ress/dist/ress.min.css")
   link(rel="stylesheet", href=url_for("/css/header.css"))
   link(rel="stylesheet", href=url_for("/css/style.css"))
+  link(rel="stylesheet", href=url_for("/css/post/post.css"))
   link(rel="stylesheet", href=url_for("/css/footer.css"))
 
   link(rel="shortcut icon", type="image/x-icon", href="/favicon.ico")
