--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -28,3 +28,7 @@ head
   link(rel="stylesheet", href=url_for("/css/footer.css"))
 
   link(rel="shortcut icon", type="image/x-icon", href="/favicon.ico")
+
+  script(src='https://www.googletagmanager.com/gtag/js?id=UA-128941201-1', async)
+  script.
+    window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','UA-128941201-1');
