--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -109,3 +109,12 @@ article.content__post
       display block
       max-width 100%
       margin 1em auto
+
+    // 文中のコード
+    code
+      font-size 90%
+      margin 0 2px
+      padding 0 5px
+      border 1px solid rgba(0,0,0,.08)
+      background-color rgba(0,0,0,.03)
+      border-radius 3px
