--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -8,7 +8,11 @@ head
   meta(name="author", content=config.author)
 
   meta(property="og:site_name", content=config.title)
-  meta(property="og:title", content=page.title)
+  if page.title
+    meta(property="og:title", content=page.title)
+  else
+    meta(property="og:title", content="Home")
+
   meta(property="og:description", content=config.description)
 
   if page.layout === "post"
