[update] ogp image

--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -21,7 +21,7 @@ head
     meta(property="og:type", content="website")
 
   meta(property="og:url", content=page.link)
-  //- meta(property="og:image", content="#")
+  meta(property="og:image", content=url_for("images/ogp.png"))
   //- meta(property="fb:app_id", content="#")
 
   //- meta(name="twitter:card", content="summary")
