[fix] ogp image path

--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -21,7 +21,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
     meta(property="og:type", content="website")
 
   meta(property="og:url", content=page.link)
-  meta(property="og:image", content=url_for("images/ogp.png"))
+  meta(property="og:image", content="https://blog.oldbigbuddha.net/images/ogp.png")
   //- meta(property="fb:app_id", content="#")
 
   //- meta(name="twitter:card", content="summary")
