[add] ogp for twitter

--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -25,9 +25,8 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
 
   meta(property="fb:app_id", content="2154307747924530")
 
-  //- meta(name="twitter:card", content="summary")
-  //- meta(name="twitter:site", content="サイトのURL貼る")
-  //- meta(name="twitter:image", content="ogpのURL貼る")
+  meta(name="twitter:card", content="summary")
+  meta(name="twitter:creator", content="@OJI_1941")
 
   block title
 
