[fix] ogp title of index

--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -11,7 +11,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   if page.title
     meta(property="og:title", content=page.title)
   else
-    meta(property="og:title", content="Home")
+    meta(property="og:title", content="Simple is Best")
 
   meta(property="og:description", content=config.description)
 
