--- a/themes/chord/layout/_partial/head.pug
+++ b/themes/chord/layout/_partial/head.pug
@@ -21,12 +21,13 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
     meta(property="og:type", content="website")
 
   meta(property="og:url", content=page.link)
-  meta(property="og:image", content="https://blog.oldbigbuddha.net/images/ogp.png")
+  meta(property="og:image", content="https://blog.oldbigbuddha.net/images/ogp/ogp.png")
 
   meta(property="fb:app_id", content="2154307747924530")
 
   meta(name="twitter:card", content="summary")
   meta(name="twitter:creator", content="@OJI_1941")
+  meta(name="twitter:image", content="https://blog.oldbigbuddha.net/images/ogp/twitter.png")
 
   block title
 
