[update] tag style

--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -11,8 +11,13 @@ block content
     hr
 
     section!= page.content
+
+    hr
+
+    p Tags
     if page.tags
       .post__tags
-        for tag in page.tags.toArray()
-          a(href=url_for(tag.path))= tag.name
+        ul
+          for tag in page.tags.toArray()
+            li: a(href=url_for(tag.path))= tag.name
   include _include/paginator_post
