--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -20,7 +20,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   else
     meta(property="og:type", content="website")
 
-  meta(property="og:url", content=url_for(page.path))
+  meta(property="og:url", content=page.title )
   meta(property="og:image", content="https://blog.oldbigbuddha.net/images/ogp/ogp.png")
 
   meta(property="fb:app_id", content="2154307747924530")
@@ -35,6 +35,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   link(rel="stylesheet", href=url_for("/css/header.css"))
   link(rel="stylesheet", href=url_for("/css/style.css"))
   link(rel="stylesheet", href=url_for("/css/post/post.css"))
+  link(rel="stylesheet", href=url_for("/css/post/tag.css"))
   link(rel="stylesheet", href=url_for("/css/footer.css"))
 
   link(rel="shortcut icon", type="image/x-icon", href="/favicon.ico")
