--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -8,26 +8,15 @@ article.content__post
       margin-bottom 1em
 
     h1
-      position relative
-      background #dfefff
-      box-shadow 0px 0px 0px 5px #dfefff
-      border dashed 2px white
-      padding 0.2em 0.5em
-      color #454545
-      &:after
-        position absolute
-        content ''
-        left -7px
-        top -7px
-        border-width 0 0 15px 15px
-        border-style solid
-        border-color #fff #fff #a8d4ff
-        box-shadow 1px 1px 1px rgba(0, 0, 0, 0.15)
+      padding-bottom .25em
+      border-bottom solid 3px #080808
 
     h2
-      border-bottom dashed 2px #c6e3ff
-      padding-left 4px
-      font-size: 1em
+      padding 0.25em 0.5em
+      color #494949
+      background transparent
+      border-left solid 5px #080808
+      font-size 1em
 
     // 箇条書き
 
