[update] share hatebu

--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -28,7 +28,7 @@ block content
       .button
         i.fab.fa-facebook
       .button
-        i.fab.fa-google-plus-g
+        img(src=url_for("/images/hatebu.png"))
       .button
         i.fas.fa-link
 
