--- a/themes/chord/source/css/post/share.styl
+++ b/themes/chord/source/css/post/share.styl
@@ -12,6 +12,11 @@
   display flex
   box-shadow 2px 2px 1px gray
 
+  img
+    display block
+    width 20px
+    flex 0 1 auto
+    margin auto
   i
     flex 0 1 auto
     margin auto
