[add] hover animation

--- a/themes/chord/source/css/post/share.styl
+++ b/themes/chord/source/css/post/share.styl
@@ -11,6 +11,11 @@
   background-color white
   display flex
   box-shadow 2px 2px 1px gray
+  transition: all .3s
+
+  &:hover
+    background-color black
+    color white
 
   img
     display block
