--- a/themes/chord/source/css/post/share.styl
+++ b/themes/chord/source/css/post/share.styl
@@ -1,4 +1,4 @@
-.share
+#share
   display flex
   justify-content space-between
   padding 4px
@@ -29,3 +29,7 @@
     margin auto
     &:hover
       fill #fff
+
+#notification
+  display none
+  padding 16px
