--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -21,15 +21,9 @@ article.content__post
     // 箇条書き
 
     ul li
-      list-style none
+      display list-item
       line-height 1.5
       padding 0.5em 0
-      &:before
-        font-family "Font Awesome 5 Free"
-        font-weight 900
-        content '\f152'
-        margin 0 5px 0 -15px
-        color #a8d4ff
 
     // 引用
     blockquote
