--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -20,8 +20,12 @@ article.content__post
 
     // 箇条書き
 
-    ul li
-      display list-item
+    ul, ol
+      background #fcfcfc
+      padding 0.5em 0.5em 0.5em 2em
+      margin 8dp
+
+    ul li, ol li
       line-height 1.5
       padding 0.5em 0
 
