[update] blockquete style

--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -32,56 +32,33 @@ article.content__post
     // 引用
     blockquote
       position relative
-      padding 7px 16px
-      box-sizing border-box
+      padding 10px 15px 10px 60px
+      margin-top 24px
+      margin-bottom 32px
       font-style italic
-      color #464646
-      background-color #f0f7ff
+      background #efefef
+      color #555
       &:before
-          display inline-block
-          position absolute
-          top -20px
-          left -20px
-          width 40px
-          height 40px
-          line-height 40px
-          border-radius 50%
-          vertical-align middle
-          text-align center
-          content "\f10d"
-          font-family "Font Awesome 5 Free"
-          font-weight 900
-          background #72ccf4
-          color #FFF
-          font-size 22px
-          font-weight 900
-      &:after
-          display inline-block
-          position absolute
-          bottom -20px
-          right -20px
-          width 40px
-          height 40px
-          line-height 40px
-          border-radius 50%
-          vertical-align middle
-          text-align center
-          content "\f10e"
-          font-family "Font Awesome 5 Free"
-          font-weight 900
-          background #72ccf4
-          color #FFF
-          font-size 22px
-          font-weight 900
+        display inline-block
+        position absolute
+        top 18px
+        left 15px
+        vertical-align middle
+        content "\f10d"
+        font-family "Font Awesome 5 Free"
+        color #cfcfcf
+        font-size 30px
+        line-height 1
+        font-weight 900
       p
-          padding 0
-          margin 10px 0
-          line-height 1.7
+        padding 0
+        margin 10px 0
+        line-height 1.7
       cite
-          display block
-          text-align right
-          color #888888
-          font-size 0.9em
+        display block
+        text-align right
+        color #888888
+        font-size 0.9em
 
     // 強調・イタリック体
 
