--- a/themes/chord/source/css/post/post.styl
+++ b/themes/chord/source/css/post/post.styl
@@ -1,6 +1,8 @@
 @import "./notations.styl"
 
 article.content__post
+  font-family "Noto Serif JP","游ゴシック Medium","Yu Gothic Medium","游ゴシック体",YuGothic,sans-serif;
+
   h1.post__title
     font-size 2.5em
     text-align center
