[add] Google Adsense code in head

--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -44,5 +44,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   link(rel="shortcut icon", type="image/x-icon", href="/favicon.ico")
 
   script(src='https://www.googletagmanager.com/gtag/js?id=UA-128941201-1', async)
+  script(src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js', async)
   script.
     window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','UA-128941201-1');
+    (adsbygoogle=window.adsbygoogle||[]).push({google_ad_client:"ca-pub-2427798032219417",enable_page_level_ads:true});
