--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -8,6 +8,15 @@ block content
     h1.post__title= page.title
     .post__date= page.date.format(config.date_format)
 
+    //- 【Simple is Best】上部 - タイトル下
+    script(src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", async)
+    ins.adsbygoogle(
+      style="display:inline-block;width:728px;height:90px",
+      data-ad-client="ca-pub-2427798032219417",
+      data-ad-slot="1019140575")
+    script.
+      (adsbygoogle = window.adsbygoogle || []).push({})
+
     hr
 
     section!= page.content
