[add] ads under pagenation

--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -46,4 +46,15 @@ block content
 
   include _include/paginator_post
 
+  //- 【Simple is Best】下部 - ページネーション下
+  script(src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", async)
+  ins.adsbygoogle(
+    style="display:block",
+    data-ad-client="ca-pub-2427798032219417",
+    data-ad-slot="6159786614",
+    data-ad-format="auto",
+    data-full-width-responsive="true")
+  script.
+    (adsbygoogle = window.adsbygoogle || []).push({});
+
   script(src=url_for("/js/share.js"))
