--- a/themes/chord/layout/index.pug
+++ b/themes/chord/layout/index.pug
@@ -2,6 +2,7 @@ extends _include/layout
 
 block title
   title= config.title
+  link(rel="stylesheet", href=url_for("/css/index.css"))
 
 block content
   div.content__index
