[fix] remove list-decoration in header
Fix #84

--- a/themes/chord/source/css/header.styl
+++ b/themes/chord/source/css/header.styl
@@ -24,6 +24,7 @@ nav.header
     .menu__item
       align-items stretch
       font-size 2rem
+      list-style none
       a
         padding 8px
         font-size 1.5rem
