[update] move to /component
Move header and footer component to /css/component.

--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -36,8 +36,8 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   link(rel="stylesheet", href=url_for("/css/font.css"))
   link(rel="stylesheet", href=url_for("/css/base.css"))
   link(rel="stylesheet", href=url_for("/css/style.css"))
-  link(rel="stylesheet", href=url_for("/css/header.css"))
-  link(rel="stylesheet", href=url_for("/css/footer.css"))
+  link(rel="stylesheet", href=url_for("/css/component/header.css"))
+  link(rel="stylesheet", href=url_for("/css/component/footer.css"))
 
   link(rel="shortcut icon", type="image/x-icon", href="/favicon.ico")
 
