--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -2,9 +2,12 @@ extends _include/layout
 
 block title
   title= `${page.title} | ${config.title}`
+
+block style
   link(rel="stylesheet", href=url_for("/css/post/post.css"))
   link(rel="stylesheet", href=url_for("/css/post/share.css"))
   link(rel="stylesheet", href=url_for("/css/post/tag.css"))
+  link(rel="stylesheet", href=url_for("/css/post/syntax_highlight.css"))
 
 
 block content
