--- a/themes/chord/source/css/_variables.styl
+++ b/themes/chord/source/css/_variables.styl
@@ -11,8 +11,4 @@ $lv1_color = #DDFEE4
 $selection_bgcolor = $lv2_color
 $selection_color = #fff
 
-
-
-/** font **/
-$glob_font_size = 62.5%
-$glob_font_family = "TIBch", "Classic Grotesque W01", "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, sans-serif
+$font_family = fot-tsukubrdgothic-std,sans-serif
