--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -33,7 +33,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
 
   link(rel="stylesheet", href="https://unpkg.com/ress/dist/ress.min.css")
   link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css", integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
-  //- link(rel="stylesheet", href=url_for("/css/font.css"))
+  link(rel="stylesheet", href=url_for("/css/font.css"))
   link(rel="stylesheet", href=url_for("/css/base.css"))
   link(rel="stylesheet", href=url_for("/css/component/header.css"))
   link(rel="stylesheet", href=url_for("/css/component/footer.css"))
