--- a/themes/chord/source/css/post/syntax_highlight.styl
+++ b/themes/chord/source/css/post/syntax_highlight.styl
@@ -19,7 +19,7 @@ figure.highlight {
     .gutter,
     .code,
     .tag {
-        font-family: Menlo;
+        font-family: "RictyDiminished",sans-serif;
         border:      none;
         padding:     0;
         margin:      0;
