--- a/themes/chord/source/css/component/tag.styl
+++ b/themes/chord/source/css/component/tag.styl
@@ -1,4 +1,8 @@
+@import '../_variables'
+
 .post__tags
+  #tags__title
+    margin-bottom 0.5em
   ul
     margin 0
     padding 0
@@ -25,6 +29,6 @@
         -webkit-transition .2s
         transition .2s
         &:hover
-          background-color #3498db
-          border 1px solid #3498db
-          color #fff
+          background-color #333
+          // border 1px solid #3498db
+          color $selection_color
