--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -6,7 +6,7 @@ block title
 block style
   link(rel="stylesheet", href=url_for("/css/post/post.css"))
   link(rel="stylesheet", href=url_for("/css/post/share.css"))
-  link(rel="stylesheet", href=url_for("/css/post/tag.css"))
+  link(rel="stylesheet", href=url_for("/css/component/tag.css"))
   link(rel="stylesheet", href=url_for("/css/post/syntax_highlight.css"))
 
 
@@ -15,7 +15,6 @@ block content
     h1.post__title= page.title
     .post__date= page.date.format(config.date_format)
 
-    //- 【Simple is Best】上部 - タイトル下
     script(src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", async)
     ins.adsbygoogle(
       style="display:inline-block;width:728px;height:90px",
@@ -32,7 +31,7 @@ block content
 
     if page.tags
       .post__tags
-        p Tags
+        p#tags__title Tags
         ul
           for tag in page.tags.toArray()
             li: a(href=url_for(tag.path))= tag.name
