--- a/themes/chord/source/css/post/post.styl
+++ b/themes/chord/source/css/post/post.styl
@@ -15,6 +15,7 @@ article.content__post
 
   p
     font-size 1.2rem
+    margin-bottom 1.2em
 
 
 .post_paginator
@@ -34,48 +35,6 @@ article.content__post
     float right
     &::after
       content " >"
-
-  .post__tags
-  text-align right
-  margin-top 20px
-    a
-      line-height 1.7rem
-      display inline-block
-      margin-left 1em
-      position relative
-      padding-left 1.5em
-      padding-right 1.5em
-      border-radius 0 .28571429rem .28571429rem 0
-      -webkit-transition none
-      transition none
-      background-color #ebfaf2
-      border-color #00b5ad
-      color #1FAE89
-      &::before
-        box-sizing border-box
-        position absolute
-        -webkit-transform translateY(-50%) translateX(50%) rotate(-45deg)
-        transform translateY(-50%) translateX(50%) rotate(-45deg)
-        top 50%
-        right 100%
-        content ""
-        background-color inherit
-        background-image none
-        width 1.2rem
-        height 1.2rem
-        -webkit-transition none
-        transition none
-      &::after
-        position absolute
-        content ""
-        top 50%
-        left -.25em
-        margin-top -.25em
-        background-color #fff !important
-        width .5em
-        height .5em
-        box-shadow 0 -1px 1px 0 rgba(0,0,0,.3)
-        border-radius 500rem
 
 .paginator
   margin-top 50px
