[add] link to page header

--- a/themes/chord/layout/_include/header.pug
+++ b/themes/chord/layout/_include/header.pug
@@ -1,9 +1,10 @@
 header
-  .site__name
-    .logo
+  a(href="https://oldbigbuddha.dev/")
+  #site__name
+    #logo
       a(href=url_for("/"))
         img(src=url_for(theme.logo) alt="logo").
-    h1.title Simple is Best
+    h1.title: a(href="https://oldbigbuddha.dev/") Simple is Best
 
   nav.header
     ul.menu
