--- a/themes/chord/layout/_include/paginator.pug
+++ b/themes/chord/layout/_include/paginator.pug
@@ -1,7 +1,9 @@
 if page.prev || page.next
-  .paginator
+  #paginator
     if page.prev
-      a.pre(href=url_for(page.prev_link || page.prev.path))= __('previous')
+      #newer
+        a(href=url_for(page.prev_link || page.prev.path)) 新しい記事へ
 
     if page.next
-      a.next(href=url_for(page.next_link || page.next.path))= __('next')
+      #older
+        a(href=url_for(page.next_link || page.next.path)) 古い記事へ
