--- a/themes/chord/layout/index.pug
+++ b/themes/chord/layout/index.pug
@@ -6,6 +6,7 @@ block title
 block style
   link(rel="stylesheet", href=url_for("/css/index.css"))
   link(rel="stylesheet", href=url_for("/css/component/tag.css"))
+  link(rel="stylesheet", href=url_for("/css/component/paginator.css"))
 
 block content
   div.content__index
@@ -21,6 +22,8 @@ block content
                 ul
                   for tag in post.tags.toArray()
                     li: a(href=url_for(tag.path))= tag.name
+
+  hr
 
 block pagination
   include _include/paginator
