--- a/themes/chord/source/css/post/post.styl
+++ b/themes/chord/source/css/post/post.styl
@@ -19,6 +19,7 @@ article.content__post
 
 
 .post_paginator
+  display flex
   margin: 30px 0
   text-align center
   &::after
@@ -27,12 +28,13 @@ article.content__post
   display table
 
   .pre
-    float left
+    // float left
     &::before
       content "< "
 
   .next
-    float right
+    // float right
+    margin-left auto
     &::after
       content " >"
 
