[update] paginator in post

--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -50,7 +50,7 @@ block content
     #notification
       p URLをクリップボードにコピーしました。
 
-  include _include/paginator_post
+  include _include/paginator
 
   //- 【Simple is Best】下部 - ページネーション下
   script(src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", async)
