--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -40,6 +40,7 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   link(rel="stylesheet", href=url_for("/css/base.css"))
   link(rel="stylesheet", href=url_for("/css/component/header.css"))
   link(rel="stylesheet", href=url_for("/css/component/footer.css"))
+  link(rel="stylesheet", href=url_for("/css/component/paginator.css"))
 
   block style
 
