[fix] header url

--- a/themes/chord/layout/_include/header.pug
+++ b/themes/chord/layout/_include/header.pug
@@ -1,10 +1,10 @@
 header
-  a(href="https://oldbigbuddha.dev/")
+  a(href=url_for("/"))
   #site__name
     #logo
       a(href=url_for("/"))
         img(src=url_for(theme.logo) alt="logo").
-    h1.title: a(href="https://oldbigbuddha.dev/") Simple is Best
+    h1.title: a(href=url_for("/")) Simple is Best
 
   nav.header
     ul.menu
