--- a/themes/chord/source/css/component/header.styl
+++ b/themes/chord/source/css/component/header.styl
@@ -1,34 +1,38 @@
 header
   width 100%
 
-.logo a img
-  height 125px
-  text-align center
+  .logo
+    a
+      img
+        height 125px
+        text-align center
 
-h1.title
-  width 100%
-  text-align center
-  padding 12px
-  font-size 3rem
-
-nav.header
-  width 100%
-  margin 0 auto
-  background-color #000
-
-  .menu
+  h1.title
     width 100%
-    display flex
-    flex-direction row
-    justify-content space-around
-    .menu__item
-      align-items stretch
-      font-size 2rem
-      list-style none
-      a
-        padding 8px
-        font-size 1.5rem
-        color #fff
+    text-align center
+    padding 12px
+    font-size 3rem
+    a
+      color #333
+
+  nav.header
+    width 100%
+    margin 0 auto
+    background-color #000
+
+    .menu
+      width 100%
+      display flex
+      flex-direction row
+      justify-content space-around
+      .menu__item
+        align-items stretch
+        font-size 2rem
+        list-style none
+        a
+          padding 8px
+          font-size 1.5rem
+          color #fff
 
 @media screen and (max-width: 480px)
   .header
