--- a/themes/chord/layout/archive.pug
+++ b/themes/chord/layout/archive.pug
@@ -1,11 +1,9 @@
 extends _include/layout
 
 block title
-  if page.category
-    title= page.category + " | " + config.title
-  if page.tag
+  if is_tag()
     title= page.tag + " | " + config.title
-  if page.archive
+  else if is_archive()
     title= __('archive') + " | " + config.title
 
 block style
