--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -31,8 +31,8 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
 
   block title
 
-  link(rel="stylesheet", href="https://unpkg.com/ress/dist/ress.min.css")
-  link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css", integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
+  link(rel="stylesheet", href=url_for("/css/lib/ress.min.css"))
+  link(rel="stylesheet", href=url_for("/css/lib/fontawesome-v5.5.0.min.css"))
 
   if page.code === true
     link(rel="stylesheet", href=url_for("/css/font.css"))
