[update] Font Awesome Kit

--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -32,7 +32,8 @@ head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.
   block title
 
   link(rel="stylesheet", href=url_for("/css/lib/ress.min.css"))
-  link(rel="stylesheet", href=url_for("/css/lib/fontawesome-free-5.12.1-all.min.css"))
+
+  //- link(rel="stylesheet", href=url_for("/css/lib/fontawesome-free-5.12.1-all.min.css"))
 
   if page.code === true
     link(rel="stylesheet", href=url_for("/css/font.css"))
