--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -5,6 +5,7 @@ block title
 
 block style
   link(rel="stylesheet", href=url_for("/css/post/post.css"))
+  script(src='https://kit.fontawesome.com/da314288dc.js', crossorigin='anonymous')
   link(rel="stylesheet", href=url_for("/css/post/share.css"))
   link(rel="stylesheet", href=url_for("/css/component/tag.css"))
   link(rel="stylesheet", href=url_for("/css/post/syntax_highlight.css"))
