--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -8,11 +8,15 @@ article.content__post
       margin-bottom 1em
 
     h2
-      padding 0.25em 0.5em
       color #494949
-      background transparent
+      border-bottom solid 3px #080808
+      font-size 1.5em
+
+    h3
+      color #494949
       border-left solid 5px #080808
-      font-size 1em
+      font-size 1.2em
+
 
     // 箇条書き
 
