--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -2,8 +2,14 @@ article.content__post
   section
     font-size 1.2em
 
+    p
+      text-indent 1em
+
+    p.no-indent
+      text-indent 0
+
     // 見出し
-    h1, h2, h3, h4, h5, h6
+    h1, h2, h3
       margin-top 1em
       margin-bottom 1em
 
