--- a/themes/chord/layout/page.pug
+++ b/themes/chord/layout/page.pug
@@ -4,4 +4,5 @@ block title
   title= `${page.title} | ${config.title}`
 
 block content
-  article.about!= page.content
+  main
+    article.about!= page.content
