--- a/themes/chord/source/css/base.styl
+++ b/themes/chord/source/css/base.styl
@@ -20,12 +20,12 @@ img
 
 section.content
   width 800px
-  margin 50px auto 50px
+  margin 2em auto
 
-@media screen and (max-width: 800px) and (min-width: 480px)
+@media screen and (max-width: 559px)
   .content
     width 90%
 
-@media screen and (max-width: 480px)
+@media screen and (max-width: 959px)
   .content
     width 90%
