--- a/themes/chord/source/css/component/footer.styl
+++ b/themes/chord/source/css/component/footer.styl
@@ -1,6 +1,8 @@
+@import "../_variables"
 .copyright
   text-align center
-  margin 100px 0 40px
-  color #444
+  margin 0 auto
+  color $bg_color
+  background-color #333
   a
-    color #1FAE89
+    color $lv1_color
