--- a/themes/chord/layout/_include/header.pug
+++ b/themes/chord/layout/_include/header.pug
@@ -2,17 +2,6 @@ link(rel="stylesheet", href=url_for("/css/component/header.css"))
 header
   a(href=url_for("/"))
   #site__name
-    #logo
-      a(href=url_for("/"))
-        img(src=url_for(theme.logo) alt="logo").
-    h1.title: a(href=url_for("/")) Simple is Best
-
-  nav.header
-    ul.menu
-      each menu in theme.menu
-        li.menu__item
-          a(href=url_for(menu.directory))= __(menu.page)
-
-
-
-
+    p.title: a(href=url_for("/"))= config.title
+    if config.subtitle
+      p.subtitle= config.subtitle
