[update] heading design

--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -14,14 +14,18 @@ article.content__post
       margin-bottom 1em
 
     h2
+      width 50%
       color #494949
       border-bottom solid 3px #080808
       font-size 1.5em
+      padding-left .5em
+      margin-top 2em
 
     h3
       color #494949
       border-left solid 5px #080808
       font-size 1.2em
+      padding-left 1em
 
 
     // 箇条書き
