--- a/themes/chord/source/css/component/footer.styl
+++ b/themes/chord/source/css/component/footer.styl
@@ -1,8 +1,9 @@
 @import "../_variables"
-.copyright
-  text-align center
+footer
+  background-color $font_color
   margin 0 auto
+  text-align center
   color $bg_color
-  background-color #333
+
   a
     color $lv1_color
