[update] responsive design
Add browserSync

--- a/themes/chord/layout/post.pug
+++ b/themes/chord/layout/post.pug
@@ -25,7 +25,7 @@ block content
       script.
         (adsbygoogle = window.adsbygoogle || []).push({})
 
-      hr
+      hr#top
 
       section!= page.content
 
