--- a/themes/chord/source/css/base.styl
+++ b/themes/chord/source/css/base.styl
@@ -18,14 +18,16 @@ img
   margin auto
   display block
 
-section.content
+.content
   width 800px
   margin 2em auto
-
-@media screen and (max-width: 559px)
-  .content
-    width 90%
 
 @media screen and (max-width: 959px)
   .content
     width 90%
+    margin 0
+    padding 2em 1em
+
+@media screen and (max-width: 559px)
+  .content
+    width 100%
