--- a/themes/chord/layout/_include/head.pug
+++ b/themes/chord/layout/_include/head.pug
@@ -1,7 +1,7 @@
 head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#")
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
-  meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=0")
+  meta(name="viewport", content="width=device-width, initial-scale=1")
   meta(name="format-detection", content="telephone=no")
 
   meta(name="description", content=config.description)
