--- a/themes/chord/source/css/post/notations.styl
+++ b/themes/chord/source/css/post/notations.styl
@@ -92,3 +92,13 @@ article.content__post
       border 1px solid rgba(0,0,0,.08)
       background-color rgba(0,0,0,.03)
       border-radius 3px
+
+@media screen and (max-width: 959px)
+  article.content__post
+    hr#top
+      margin-bottom 1.5em
+
+    section
+      h2
+        width 100%
+        margin-top 1em
