--- a/themes/chord/source/css/post/post.styl
+++ b/themes/chord/source/css/post/post.styl
@@ -68,3 +68,8 @@ article.content__post
 
   .next
     float right
+
+@media screen and (max-width: 959px)
+  article.content__post
+    hr
+      margin 0
